--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "start": "webpack-dev-server --config webpack.dev.js --open"
   },
   "dependencies": {
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.4",
+    "socket.io-client": "^2.0.3"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.3",
